Fixed data placement and overflow on timeline
Timeline now sorts data correctly from right to left, as well as
scrolling rather than a straight overflow

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -71,16 +71,20 @@ h4 {
     /*text-decoration: underline;*/
 }
 .horizTimeLine {
-    white-space: normal;
-    overflow-x: hidden;
+    white-space: nowrap;
+    overflow-x: scroll;
     padding:30px 0 10px 0;
     position:relative;
     width: 100%;
+    direction: rtl;
+
 }
 
 .encounterBox {
     display:inline-block;
+    direction: rtl;
     vertical-align:top;
+    white-space: normal;
     background:#9DA8b0;
     color:black;
     font-size:12px;
